PerpetualShred/wwwroot/css/ReactPlayerTest.css
.video-background iframe {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

body {
    background-color: #EEE;
    font-family: sans-serif;
    font-size: 20px;
    padding: 25px;
    margin: 0;
    overflow: auto;
    color: white;
}

#container li {
    margin-bottom: 10px;
}

#infoButton {
    background-color: #96D9FF;
    margin-bottom: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 10px solid #0065A6;
    outline: none;
    transition: all .2s cubic-bezier(0, 1.26, .8, 1.28);
    position: absolute;
    top: 15px;
    right: 15px;
    z-index: 11;
}

#infoButton:active {
        border-color: #003557;
        background-color: #FFF;
    }
    
#flyoutMenuBackground {
    width: 30vw;
    height: 100vh;
    background-color: rgba(105, 33, 33, 0.7);
    position: fixed;
    top: 0;
    left: 0;
    transition: transform .3s cubic-bezier(0, .52, 0, 1);
    z-index: 9;
}

#flyoutMenuBackground.hide {
    transform: translate3d(200vw, 0, 0);
}

#flyoutMenuBackground.show {
    transform: translate3d(70vw, 0, 0);
    overflow: hidden;
}


#flyoutMenu {
    width: 30vw;
    height: 100vh;
    background-color: transparent;
    position: fixed;
    top: 0;
    left: 0;
    transition: transform .3s cubic-bezier(0, .52, 0, 1);
    z-index: 10;
}

#flyoutMenu.hide {
    transform: translate3d(200vw, 0, 0);
}

#flyoutMenu.show {
    transform: translate3d(70vw, 0, 0);
    overflow: hidden;
}

@media (max-width: 1200px) {
    #flyoutMenu {
        width: 40vw;
    }

    #flyoutMenu.show {
        transform: translate3d(60vw, 0, 0);
        overflow: hidden;
    }

    #flyoutMenuBackground {
        width: 40vw;
    }

    #flyoutMenuBackground.show {
        transform: translate3d(60vw, 0, 0);
        overflow: hidden;
    }
}

#vidtitle {
    font-family: serif;
    font-weight: 500;
    font-size: 48px;
    padding-top: 20%;
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 5%;
    letter-spacing: -0.3px;
    text-align: left;
    text-shadow: 0 0 12px rgba(0, 0, 0, 0.75);
}

#descriptionheader {
    padding-left: 10%;
    padding-right: 10%;
    font-family: PTMono;
    font-size: 12px;
    font-weight: bold;
    letter-spacing: 4px;
    text-align: left;
    text-shadow: 0 0 12px rgba(0, 0, 0, 0.75);
}

#vidsynopsis {
    padding-top: 5%;
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 5%;
    font-family: PTMono;
    line-height: 1.33;
    letter-spacing: -0.4px;
    text-align: left;
    text-shadow: 0 0 12px rgba(0, 0, 0, 0.75);
}

#vidoriginlink {
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 5%;
}

